--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,7 +10,8 @@ java {
 dependencies {
     // Logging deps
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.19.0'
-    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
+    //noinspection AnnotationProcessorOnCompilePath
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
 
     // JSON parsing deps
@@ -23,8 +24,6 @@ dependencies {
     // Other deps
     implementation group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
-    //noinspection AnnotationProcessorOnCompilePath
-    implementation 'org.projectlombok:lombok:1.18.26'
 
     // Testing deps
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
@@ -36,3 +35,6 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 }
 
+test {
+    useJUnitPlatform()
+}
