--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,21 +9,22 @@ java {
 
 dependencies {
     // Logging deps
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
     //noinspection AnnotationProcessorOnCompilePath
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
 
     // JSON parsing deps
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 
     // HTTP deps
-    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.2.1'
-    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5-fluent', version: '5.2.1'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 
     // Other deps
-    implementation group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
 
     // Testing deps
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
