--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,11 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
+    }
+
+    packagingOptions {
+        pickFirst "META-INF/DEPENDENCIES"
     }
 }
 
