--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     // lib module
     implementation project(':lib')
 
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'uk.uuid.slf4j:slf4j-android:2.0.7-0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
