--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.7'
     implementation 'uk.uuid.slf4j:slf4j-android:2.0.7-0'
 
+    implementation 'com.github.1luvin:android-utils:1.4'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
